--- a/app/src/assets/home.less
+++ b/app/src/assets/home.less
@@ -274,12 +274,12 @@
       align-items: center;
       flex-wrap: nowrap;
       width: 100%;
-      gap: 4px;
       height: min-content;
 
       .chat-box {
         position: relative;
         flex-grow: 1;
+        margin: 0 4px;
       }
 
       .input-box {
